--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -432,15 +432,28 @@ button.diagram-evaluating { color: #2ca02c; }
 .transformation-type { width: 25px; text-align: center; }
 .transformation-source { padding-left: 5px; }
 
-.file-input-container { display: inline-block; width: -webkit-calc(100% - 50px); height: 34px; background-color: #fff; border-radius: 4px 0 0 4px; border-left: 1px solid #d9d9d9; border-top: 1px solid #d9d9d9; border-bottom: 1px solid #d9d9d9; }
+.file-input-container { display: inline-block; width: -webkit-calc(100% - 50px); height: 34px; background-color: #fff; border-radius: 4px 0 0 4px; border: 1px solid #d9d9d9; }
 .file-input-container.dragging-file { color: #666; background-color: #98df8a; }
 .file-input-progress { position: relative; width: 30px; height: 30px; margin: 2px 10px 2px 4px; }
 .file-input-label { position: relative; height: 34px; line-height: 34px; vertical-align: middle; color: #aaa; font-size: 1.0em; }
 .file-input-label.configured { color: #666; }
-.file-input-search { display: inline-block; width: 50px; height: 34px; line-height: 34px; text-align: center; vertical-align: middle; background-color: #f5f5f5; color: #333; border-radius: 0 4px 4px 0; border: 1px solid #d9d9d9; cursor: pointer; }
-.file-input-search:hover { background-color: #aec7e8; color: #1f77b4; }
+.file-input-link { display: inline-block; width: 50px; height: 34px; line-height: 34px; text-align: center; vertical-align: middle; background-color: #f5f5f5; font-size: 14px; color: #333; border-radius: 0 4px 4px 0; border-top: 1px solid #d9d9d9; border-right: 1px solid #d9d9d9; border-bottom: 1px solid #d9d9d9; cursor: pointer; }
+.file-input-link:hover { background-color: #aec7e8; color: #1f77b4; }
+.file-input-link:active { background-color: #1f77b4; color: #aec7e8; }
 .file-input-clear { display: inline-block; height: 32px; line-height: 32px; margin-right: 10px; vertical-align: middle; color: #aaa; cursor: pointer; }
 .file-input-clear:hover { color: #d62728; }
+
+.form-control.input-group-select { -webkit-appearance: none; }
+.arrow-down {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #666;
+    pointer-events: none;
+    z-index: 2;
+}
 
 /* progress circle */
 .progress-circle { width: 100%; height: 100%; }
@@ -464,8 +477,17 @@ button.diagram-evaluating { color: #2ca02c; }
 #modal-toaster { position: absolute; bottom: 0; left: 0; width: 100%; pointer-events: none; z-index: 1; }
 .modal-main-content-container { position: relative; float: left; height: 100%; }
 .modal-main-content { padding: 20px; width: 100%; height: 100%; }
+.modal-grid-header { font-size: 1.4em; margin-top: 15px; margin-bottom: 15px; padding-left: 15px; }
 .modal-grid-row { margin-bottom: 15px; }
-.modal-grid-label { height: 34px; line-height: 34px; vertical-align: middle; text-align: right; }
+.modal-grid-label { height: 34px; line-height: 34px; vertical-align: middle; text-align: right; color: #999; }
+.modal-grid-value { height: 34px; line-height: 34px; vertical-align: middle; text-align: left; }
+.block-config-header { position: relative; height: 40px; width: 100%; line-height: 40px; }
+.block-config-body { margin-top: 15px; width: 100%; height: -webkit-calc(100% - 55px); }
+.block-config-card { width: 100%; height: 100%; background-color: #fff; border: 1px solid #ccc; border-radius: 4px; }
+.block-config-card.ng-enter { -webkit-animation: fadeIn 0.4s; }
+.block-config-card-body { height: -webkit-calc(100% - 50px); }
+.block-config-card-footer { height: 50px; padding-right: 20px; }
+.block-config-card-footer .btn+.btn { margin-left: 10px; }
 
 /* set output */
 .set-output-menu-container { position: relative; float: left; height: 100%; background-color: #e7e7e7; border-right: 1px solid #d9d9d9; overflow-x: hidden; overflow-y: scroll; }
@@ -480,12 +502,12 @@ button.diagram-evaluating { color: #2ca02c; }
 .output-disabled { background-color: #9f9f9f; }
 .output-editing { background-color: #3182bd; }
 .output-enabled { background-color: #31a354; }
-.set-output-header { height: 40px; width: 100%; line-height: 40px; margin-bottom: 15px; }
-.set-output-header span { font-size: 1.2em; vertical-align: middle; }
-.set-output-header button { margin: 3px 0 3px 0; }
+.set-output-header-label { font-size: 1.2em; vertical-align: middle; }
 .set-output-buttons.ng-enter { -webkit-animation: fadeIn 0.4s; }
 .set-output-buttons .btn+.btn { margin-left: 10px; }
 .set-output-enable { width: 150px; }
+
+.set-stream-container > div { background-color: #fafafa; }
 
 /* toggle slider */
 .toggle-slider-container { position: relative; height: 34px; background-color: #f3f3f3; border-radius: 6px; border: 1px solid #ccc; overflow: hidden; cursor: pointer; }
